--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.charting-0.94.jar=C:\\Users\\Elder\\Desktop\\charting-0.94.jar
-file.reference.jcommon-1.0.23.zip=C:\\Users\\Elder\\Desktop\\jcommon-1.0.23.zip
-file.reference.jfreechart-1.0.19.zip=C:\\Users\\Elder\\Desktop\\jfreechart-1.0.19.zip
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,11 +45,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcommon-1.0.23.zip}:\
-    ${file.reference.jfreechart-1.0.19.zip}:\
     ${libs.jstl.classpath}:\
-    ${libs.spring-framework400.classpath}:\
-    ${file.reference.charting-0.94.jar}
+    ${libs.spring-framework400.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
