--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,20 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\Elder\\Desktop\\hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\Elder\\Desktop\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.zip=C:\\Users\\Elder\\Desktop\\jcommon-1.0.23.zip
+file.reference.jfreechart-1.0.19-demo.jar=C:\\Users\\Elder\\Desktop\\jfreechart-1.0.19-demo.jar
+file.reference.jfreechart-1.0.19-experimental.jar=C:\\Users\\Elder\\Desktop\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\Elder\\Desktop\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\Elder\\Desktop\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.zip=C:\\Users\\Elder\\Desktop\\jfreechart-1.0.19.zip
+file.reference.jfreesvg-2.0.jar=C:\\Users\\Elder\\Desktop\\jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=C:\\Users\\Elder\\Desktop\\junit-4.11.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=C:\\Users\\Elder\\Desktop\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=C:\\Users\\Elder\\Desktop\\orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=C:\\Users\\Elder\\Desktop\\servlet.jar
+file.reference.swtgraphics2d.jar=C:\\Users\\Elder\\Desktop\\swtgraphics2d.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +60,21 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
-    ${libs.spring-framework400.classpath}
+    ${libs.spring-framework400.classpath}:\
+    ${file.reference.jcommon-1.0.23.zip}:\
+    ${file.reference.jfreechart-1.0.19.zip}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
